Feat: Added models.py

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,3 +5,5 @@ plotly
 openpyxl         # Para exportar a Excel (pandas lo usa internamente)
 xlsxwriter       # Alternativa para escribir Excel (más control de formatos)
 reportlab       # Para generar tablas y exportar como PDF
+sqlalchemy
+faker
