--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,9 +2,6 @@
 
 FROM python:3.11-slim
 
-# Instalar dependencias del sistema necesarias
-RUN apt-get update && apt-get install -y gcc libpq-dev postgresql-client && rm -rf /var/lib/apt/lists/*
-
 # Crear directorio de trabajo
 WORKDIR /app
 
@@ -14,11 +11,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-# Asegurar permisos de ejecución para el entrypoint
-RUN chmod +x /app/entrypoint.sh
-
 # Puerto expuesto para Streamlit
 EXPOSE 8501
 
-# El entrypoint lo define docker-compose, pero por claridad:
-ENTRYPOINT ["/app/entrypoint.sh"]
+# Comando por defecto para ejecutar la app
+CMD ["streamlit", "run", "main.py", "--server.port=8501", "--server.address=0.0.0.0"]
