--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   initdb:
     build: ./app/
@@ -19,7 +17,8 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./database:/docker-entrypoint-initdb.d
+      - ./database/DDL.sql:/docker-entrypoint-initdb.d/DDL.sql:ro
+      - ./database/registros.sql:/docker-entrypoint-initdb.d/registros.sql:ro
     depends_on:
       - initdb
     healthcheck:
